deploy/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodi-ui
  namespace: nodi
spec:
  selector:
    app.kubernetes.io/name: nodi-ui
    app.kubernetes.io/part-of: nodi
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
